@@ -4,9 +4,11 @@ import com.danghieu99.monolith.order.dto.request.kafka.CancelOrderKafkaRequest;
 import com.danghieu99.monolith.order.dto.request.CancelOrderRequest;
 import com.danghieu99.monolith.order.dto.request.kafka.PlaceOrderKafkaRequest;
 import com.danghieu99.monolith.order.dto.request.PlaceOrderRequest;
+import com.danghieu99.monolith.order.dto.response.OrderDetailsResponse;
 import com.danghieu99.monolith.order.kafka.CancelOrderKafkaProducer;
 import com.danghieu99.monolith.order.kafka.PlaceOrderKafkaProducer;
 import com.danghieu99.monolith.order.mapper.OrderMapper;
+import com.danghieu99.monolith.order.repository.OrderItemRepository;
 import com.danghieu99.monolith.order.repository.OrderRepository;
 import com.danghieu99.monolith.security.config.auth.UserDetailsImpl;
 import jakarta.transaction.Transactional;
@@ -27,16 +29,32 @@ public class UserOrderService {
     private final OrderMapper orderMapper;
     private final PlaceOrderKafkaProducer placeOrderKafkaProducer;
     private final CancelOrderKafkaProducer cancelOrderKafkaProducer;
+    private final OrderItemRepository orderItemRepository;
 
-    public List<String> getOrderUUIDsByCurrentUser(@NotNull UserDetailsImpl userDetails) {
-        return orderRepository.findByUserAccountUUID(userDetails.getUuid()).stream()
+    public List<String> getUUIDsByCurrentUser(@NotNull UserDetailsImpl userDetails) {
+        return orderRepository.findByUserAccountUUID(userDetails.getUuid())
+                .stream()
                 .map(order -> order.getUuid().toString())
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public List<OrderDetailsResponse> getAllByCurrentUser(@NotNull UserDetailsImpl userDetails) {
+        return orderRepository.findByUserAccountUUID(userDetails.getUuid())
+                .stream()
+                .map(order -> {
+                    OrderDetailsResponse orderDetails = orderMapper.toOrderDetailsResponse(order);
+                    orderDetails.setItems(orderItemRepository.findByOrderId(order.getId())
+                            .stream()
+                            .map(orderMapper::toOrderItemResponse)
+                            .toList());
+                    return orderDetails;
+                })
+                .toList();
     }
 
     @Async
     @Transactional
-    public void placeOrder(@RequestBody final PlaceOrderRequest request, final UserDetailsImpl userDetails) {
+    public void place(@RequestBody final PlaceOrderRequest request, final UserDetailsImpl userDetails) {
         PlaceOrderKafkaRequest kafkaRequest = orderMapper.toKafkaPlaceOrderRequest(request);
         kafkaRequest.setAccountUUID(userDetails.getUuid());
         placeOrderKafkaProducer.send(kafkaRequest);
@@ -44,7 +62,7 @@ public class UserOrderService {
 
     @Async
     @Transactional
-    public void cancelOrder(CancelOrderRequest request, UserDetailsImpl userDetails) {
+    public void cancel(CancelOrderRequest request, UserDetailsImpl userDetails) {
         CancelOrderKafkaRequest kafkaRequest = orderMapper.toKafkaCancelOrderRequest(request);
         kafkaRequest.setAccountUUID(userDetails.getUuid());
         cancelOrderKafkaProducer.send(kafkaRequest);
